chore: update renovate config

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -19,6 +19,7 @@
   ],
   "labels": ["dependencies"],
   "rebaseWhen": "behind-base-branch",
+  "rollbackPrs": true,
   "packageRules": [
     {
       "description": "Dependency maintenance tasks",
