chore: encrypt data within the data folder

--- a/.gitattributes
+++ b/.gitattributes
@@ -12,6 +12,7 @@
 .gitkeep       export-ignore
 
 # Encrypt sensitive state/input/environment data
+data/**/ filter=git-crypt diff=git-crypt
 state/**/production/** filter=git-crypt diff=git-crypt
 state/**/*production* filter=git-crypt diff=git-crypt
 Pulumi.production.yaml filter=git-crypt diff=git-crypt
