--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "main": "src/index.ts",
   "private": true,
   "devDependencies": {
+    "@pulumi/cloudflare": "4.6.0",
     "@pulumi/github": "4.11.0",
     "@pulumi/pulumi": "3.30.0",
     "@pulumi/random": "4.4.2",
