--- a/package.json
+++ b/package.json
@@ -28,6 +28,11 @@
     "regenerator-runtime": "0.13.9",
     "typescript": "4.6.3"
   },
+  "overrides": {
+    "@pulumi/pulumi": {
+      "ts-node": "^10.0.0"
+    }
+  },
   "scripts": {
     "cm": "cz"
   },
@@ -38,5 +43,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "npm": "^8.7.0"
   }
 }
