chore(renovate): use shared renovate configuration

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,49 +1,5 @@
-// as soon as the following issue is resolved, we can use a shared parent-config from the homelab-shared repository
-// https://github.com/renovatebot/renovate/issues/7674
-// https://github.com/renovatebot/renovate/issues/15370
-// https://docs.renovatebot.com/config-presets/
 {
   "extends": [
-    "config:js-lib",
-    ":docker",
-    "docker:pinDigests",
-    "docker:enableMajor",
-    ":semanticCommits",
-    ":semanticPrefixFixDepsChoreOthers",
-    ":rebaseStalePrs",
-    ":prHourlyLimit4",
-    ":prConcurrentLimit10",
-    ":maintainLockFilesWeekly",
-    ":enableVulnerabilityAlerts",
-    ":disableDependencyDashboard",
-    "helpers:pinGitHubActionDigests"
+    "github>busybeaver/homelab-shared//.github/renovate.json5",
   ],
-  "labels": ["dependencies"],
-  "rebaseWhen": "behind-base-branch",
-  "rollbackPrs": true,
-  "packageRules": [
-    {
-      "description": "Dependency maintenance tasks",
-      "matchUpdateTypes": ["pin", "lockFileMaintenance"],
-      "stabilityDays": 0,
-      "assignees": ["busybeaver"],
-      "reviewers": ["repository-assistant[bot]"]
-    },
-    {
-      "description": "Minor and patch-level updates with usually no breaking changes",
-      "matchUpdateTypes": ["minor", "patch", "digest"],
-      // npm packages less than 72 hours (3 days) old can be unpublished
-      "stabilityDays": 3,
-      "assignees": ["busybeaver"],
-      "reviewers": ["repository-assistant[bot]"]
-    },
-    {
-      "description": "Major updates with potentially breaking changes",
-      "matchUpdateTypes": ["major"],
-      "stabilityDays": 5,
-      "assignees": ["busybeaver"],
-      "reviewers": ["busybeaver"],
-      "addLabels": ["major-update"]
-    }
-  ]
 }
