--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "main": "src/index.ts",
   "private": true,
+  "scripts": {
+    "cleanup": "zx scripts/cleanup_state_backups.mjs"
+  },
   "devDependencies": {
     "@pulumi/cloudflare": "4.12.1",
     "@pulumi/github": "5.0.0",
@@ -24,7 +27,8 @@
     "jest": "29.1.2",
     "jest-junit": "14.0.1",
     "regenerator-runtime": "0.13.9",
-    "typescript": "4.8.4"
+    "typescript": "4.8.4",
+    "zx": "7.1.0"
   },
   "engines": {
     "node": ">=16.13.0"
