--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -43,7 +43,7 @@ jobs:
     steps:
       - name: Git - Checkout
         id: git_checkout
-        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3.1.0
 
       # Initializes the CodeQL tools for scanning.
       - name: CodeQL - Initialization
@@ -79,11 +79,11 @@ jobs:
     steps:
       - name: Git - Checkout
         id: git_checkout
-        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3.1.0
 
       - name: Node - Setup
         id: node_setup
-        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
+        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3.5.1
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
@@ -91,7 +91,7 @@ jobs:
       - name: Just - Setup
         uses: extractions/setup-just@95b912dc5d3ed106a72907f2f9b91e76d60bdb76 # tag=v1
         with:
-          just-version: '^1.1.2'
+          just-version: '^1.6.0'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -121,11 +121,11 @@ jobs:
     steps:
       - name: Git - Checkout
         id: git_checkout
-        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3
+        uses: actions/checkout@93ea575cb5d8a053eaa0ac8fa3b40d7e05a33cc8 # tag=v3.1.0
 
       - name: Node - Setup
         id: node_setup
-        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3
+        uses: actions/setup-node@8c91899e586c5b171469028077307d293428b516 # tag=v3.5.1
         with:
           node-version-file: '.nvmrc'
           cache: 'npm'
@@ -133,7 +133,7 @@ jobs:
       - name: Just - Setup
         uses: extractions/setup-just@95b912dc5d3ed106a72907f2f9b91e76d60bdb76 # tag=v1
         with:
-          just-version: '^1.1.2'
+          just-version: '^1.6.0'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -158,12 +158,12 @@ jobs:
 
       - name: GitHub - Publish Unit Test Results
         id: github_publish_results
-        uses: EnricoMi/publish-unit-test-result-action@b9f6c61d965bcaa18acc02d6daf706373a448f02 # tag=v1.40
+        uses: EnricoMi/publish-unit-test-result-action@713caf1dd6f1c273144546ed2d79ca24a01f4623 # tag=v2.1.0
         if: always()
         with:
           github_token: ${{ steps.github_generate_app_token.outputs.token }}
           check_name: Test Results
-          files: ${{ env.JUNIT_TEST_RESULTS_FILE }}
+          junit_files: ${{ env.JUNIT_TEST_RESULTS_FILE }}
           # we only add github checks to the PR/commit, but don't create PR comments; reason is that comments will not
           # be replaced but always newly added due to (it looks for "github-actions" user instead of the github app user):
           # https://github.com/EnricoMi/publish-unit-test-result-action/blob/ae7c14a87cf1a1200805b487debc65963bdb3f2d/python/publish/publisher.py#L493
@@ -171,7 +171,7 @@ jobs:
 
       - name: Codecov - Upload Coverage Data
         id: codecov_upload_data
-        uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # tag=v3
+        uses: codecov/codecov-action@d9f34f8cd5cb3b3eb79b3e4b5dae3a16df499a70 # tag=v3.1.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
           directory: ./coverage/
