ci(repository): also run on pull and PR events

--- a/.github/workflows/repository.yaml
+++ b/.github/workflows/repository.yaml
@@ -1,6 +1,16 @@
 name: "Repository CI"
 
 on:
+  # run on pushes to main
+  push:
+    branches:
+      - main
+      - gh-readonly-queue/main/**
+  # run on pull requests that target the main branch
+  pull_request:
+    branches:
+      - main
+  # run on pull request events
   pull_request_target:
     types:
       - opened
