--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -91,13 +91,13 @@ jobs:
       - name: Just - Setup
         uses: extractions/setup-just@95b912dc5d3ed106a72907f2f9b91e76d60bdb76 # tag=v1
         with:
-          just-version: '^1.6.0'
+          just-version: '^1.11.0'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: NPM - Install Dependencies
         id: npm_install
-        run: npm ci
+        run: npm ci --no-progress --prefer-offline
 
       - name: TypeScript - Type Check
         id: typescript_typecheck
@@ -133,13 +133,13 @@ jobs:
       - name: Just - Setup
         uses: extractions/setup-just@95b912dc5d3ed106a72907f2f9b91e76d60bdb76 # tag=v1
         with:
-          just-version: '^1.6.0'
+          just-version: '^1.11.0'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: NPM - Install Dependencies
         id: npm_install
-        run: npm ci
+        run: npm ci --no-progress --prefer-offline
 
       - name: Jest - Unit Tests
         id: jest_unit_tests
