chore: pin workflow-references

--- a/.github/workflows/general.yaml
+++ b/.github/workflows/general.yaml
@@ -25,9 +25,7 @@ jobs:
       contents: read
       statuses: write
 
-    # TODO: pin to a sha tag and update automatically:
-    # https://github.com/renovatebot/renovate/issues/12212
-    uses: busybeaver/homelab-shared/.github/workflows/general.yaml@main
+    uses: busybeaver/homelab-shared/.github/workflows/general.yaml@v1.0.11
     with:
       lintTypescript: true
       filterRegexExlude: '.*Pulumi\.production\.yaml|.*data/.*|.*state/.*|.*\.git-crypt/.*'
