--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -97,7 +97,7 @@ jobs:
 
       - name: NPM - Install Dependencies
         id: npm_install
-        run: npm ci
+        run: npm ci --prefer-offline
 
       - name: TypeScript - Type Check
         id: typescript_typecheck
@@ -139,7 +139,7 @@ jobs:
 
       - name: NPM - Install Dependencies
         id: npm_install
-        run: npm ci
+        run: npm ci --prefer-offline
 
       - name: Jest - Unit Tests
         id: jest_unit_tests
