--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "cleanup": "zx scripts/cleanup_state_backups.mjs"
   },
   "devDependencies": {
+    "@pulumi/cloudinit": "1.3.0",
     "@pulumi/cloudflare": "4.12.1",
     "@pulumi/command": "0.1.0",
     "@pulumi/github": "5.8.0",
+    "@pulumi/oci": "0.20.1",
     "@pulumi/pulumi": "3.42.0",
     "@pulumi/random": "4.8.2",
     "@pulumi/tailscale": "0.12.1",
