--- a/.github/workflows/cleanup.yaml
+++ b/.github/workflows/cleanup.yaml
@@ -21,6 +21,13 @@ jobs:
       contents: read
 
     steps:
+      - name: StepSecurity - Harden Github-hosted Runners
+        uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+        with:
+          egress-policy: audit
+          disable-telemetry: true
+          disable-sudo: true
+
       - name: Git - Checkout
         id: git_checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
