--- a/.github/workflows/code.yaml
+++ b/.github/workflows/code.yaml
@@ -41,6 +41,13 @@ jobs:
         language: ['javascript']
 
     steps:
+      - name: StepSecurity - Harden Github-hosted Runners
+        uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+        with:
+          egress-policy: audit
+          disable-telemetry: true
+          disable-sudo: true
+
       - name: Git - Checkout
         id: git_checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
@@ -81,6 +88,13 @@ jobs:
       JUST_VERSION: 1.26.0
 
     steps:
+      - name: StepSecurity - Harden Github-hosted Runners
+        uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+        with:
+          egress-policy: audit
+          disable-telemetry: true
+          disable-sudo: true
+
       - name: Git - Checkout
         id: git_checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
@@ -125,6 +139,13 @@ jobs:
       JUNIT_TEST_RESULTS_FILE: ./.test_results_junit.xml
 
     steps:
+      - name: StepSecurity - Harden Github-hosted Runners
+        uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+        with:
+          egress-policy: audit
+          disable-telemetry: true
+          disable-sudo: true
+
       - name: Git - Checkout
         id: git_checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
@@ -199,6 +220,13 @@ jobs:
       contents: read
 
     steps:
+      - name: StepSecurity - Harden Github-hosted Runners
+        uses: step-security/harden-runner@f086349bfa2bd1361f7909c78558e816508cdc10 # v2.8.0
+        with:
+          egress-policy: audit
+          disable-telemetry: true
+          disable-sudo: true
+
       - name: Git - Checkout
         id: git_checkout
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
